comfyui/Deployment.comfyui.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
  namespace: comfyui
spec:
  replicas: 0
  selector:
    matchLabels:
      app: comfyui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: comfyui
    spec:
      containers:
        - env:
            - name: NVIDIA_VISIBLE_DEVICES
              value: all
            - name: CLI_ARGS
              value: --listen 0.0.0.0 --port 8188
          image: yanwk/comfyui-boot:cu130-megapak-pt211-20260812
          imagePullPolicy: IfNotPresent
          name: comfyui
          ports:
            - containerPort: 8188
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 6Gi
              nvidia.com/gpu: 1
            requests:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - mountPath: /home/user/opt/ComfyUI
              name: data
      nodeSelector:
        nvidia.com/gpu.present: "true"
      runtimeClassName: nvidia
      tolerations:
        - effect: NoSchedule
          key: dedicated
          operator: Equal
          value: ai
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: comfyui-data
