comfyui/Service.comfyui.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: comfyui
  namespace: comfyui
spec:
  ports:
    - name: http
      port: 8188
      protocol: TCP
      targetPort: 8188
  selector:
    app: comfyui
