comfyui/HTTPRoute.comfyui.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: comfyui
  namespace: comfyui
spec:
  hostnames:
    - comfyui.madhan.app
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: comfyui
          port: 8188
      matches:
        - path:
            type: PathPrefix
            value: /
